# pycatlib

./: LICENSE  README.md  pyproject.toml
src/pycatlib/: category.py  functor.py
tests/: test_category.py
