[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycatlib"
version = "0.0.1"
authors = [
  { name="Ben Spitz", email="benspitz@math.ucla.edu" },
]
description = "A small library for computing with finite categories."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]